Fixed footer spacing.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@ body {
 }
 
 footer {
-  @apply absolute bottom-0 w-full flex justify-center text-app-theme py-16;
+  @apply absolute bottom-0 w-full flex justify-center text-app-theme py-8;
 }
 
 input[type='text']:focus {
